# gnewcash

./: .flake8  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py  sqlite_todo.txt
.circleci/: config.yml
.github/workflows/: dev.yml  pr.yaml  prod.yml
docs/: .buildinfo  account.html  code_documentation.html  commodity.html  enums.html  file_formats.html  genindex.html  gnucash_file.html  guid_object.html  index.html  index.rst  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  searching.html  slot.html  transaction.html  transaction.rst  usage.html  utils.html  utils.rst  versions.html
docs/_modules/: account.html  commodity.html  enums.html  file_formats.html  gnucash_file.html  guid_object.html  index.html  search.html  slot.html  transaction.html  utils.html
docs/_modules/file_formats/: gnucash_sqlite.html  gnucash_xml.html
docs/_modules/gnewcash/: commodity.html  enums.html
docs/_sources/: account.rst.txt  code_documentation.rst.txt  file_formats.rst.txt  gnucash_file.rst.txt  index.rst.txt  overview.rst.txt  searching.rst.txt  slot.rst.txt  transaction.rst.txt  usage.rst.txt  versions.rst.txt
docs/_static/: documentation_options.js
docs/html/: .buildinfo  commodity.html  gnucash_file.html  guid_object.html  index.html  objects.inv  overview.html  searchindex.js  transaction.html  usage.html  utils.html
docs/html/_modules/: gnucash_file.html  index.html  transaction.html
docs/html/_modules/file_formats/: gnucash_xml.html
docs/html/_sources/: account.rst.txt  commodity.rst.txt  enums.rst.txt  gnucash_file.rst.txt  transaction.rst.txt  usage.rst.txt
docs/html/_static/: documentation_options.js
gnewcash/: __init__.py  __init__.pyi  account.py  account.pyi  commodity.py  commodity.pyi  enums.py  enums.pyi  file_formats.py  gnucash_file.py  gnucash_file.pyi  guid_object.py  guid_object.pyi  search.py  slot.py  slot.pyi  transaction.py  transaction.pyi  utils.py  utils.pyi
gnewcash/file_formats/: __init__.py  __init__.pyi  base.py  base.pyi  gnucash_sqlite.py  gnucash_xml.py  sqlite.py  sqlite.pyi  sqlite_schema.sql  xml.py  xml.pyi
sphinx/: Makefile  code_documentation.rst  conf.py  file_formats.rst  gnucash_file.rst  guid_object.rst  index.rst  slot.rst  utils.rst  versions.rst  win32_make_docs.bat
tests/: __init__.py  test_account.py  test_account_queries.py  test_gnucash_file.py  test_transaction.py  test_transaction_queries.py
tests/test_files/: Test1.gnucash  Test1.gz.gnucash  Test1.sqlite.gnucash  Test2.gnucash  Test3.gnucash  Test4.gnucash
(+1 files in other folders)
