[tool.poetry]
name = "gnewcash"
version = "1.1.1"
description = "Python Library for reading, interacting with, and writing GnuCash files"
authors = ["Paul Bromwell Jr. <pbromwelljr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
sphinx = "^1.8"
sphinx-rtd-theme = "^0.4.3"
coverage = "^4.5"
xmldiff = "^2.3"
flake8 = "^3.7"
pylint = "^2.3"
twine = "^1.13"
pytz = "^2018.9"
pylint-unittest = "^0.1.3"
flake8-deprecated = "^1.3"
flake8-super-call = "^1.0"
flake8-imports = "^0.1.1"
flake8-builtins = "^1.4"
flake8-blind-except = "^0.1.1"
flake8-logging-format = "^0.6.0"
flake8-docstrings = "^1.3"
isort = "^4.3"
mypy = "^0.700.0"
pytest = "^5.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
