[tool.poetry]
name = "gnewcash"
version = "1.1.1"
description = "Python Library for reading, interacting with, and writing GnuCash files"
authors = ["Paul Bromwell Jr. <pbromwelljr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
coverage = "^7.3.2"
xmldiff = "^2.6.3"
flake8 = "^6.1.0"
pylint = "^3.0.1"
twine = "^4.0.2"
pytz = "^2023.3"
pylint-unittest = "^0.1.3"
flake8-deprecated = "^2.1.0"
flake8-super-call = "^1.0"
flake8-imports = "^0.1.1"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"
