[tool.poetry]
name = "gnewcash"
version = "0.0.0"
description = "Python Library for reading, interacting with, and writing GnuCash files"
authors = ["Paul Bromwell Jr. <pbromwelljr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
coverage = "^7.3.2"
xmldiff = "^2.6.3"
flake8 = "^7.2.0"
pylint = "^3.0.1"
twine = "^6.1.0"
pytz = "^2025.2"
pylint-unittest = "^0.1.3"
flake8-deprecated = "^2.1.0"
flake8-super-call = "^1.0"
flake8-import-order = "^0.18.2"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-docstrings = "^1.7.0"
isort = "^6.0.1"
mypy = "^1.6.1"
pytest = "^8.4.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"
